<resources>
    <string name="app_name">Renkar</string>
	<string name="internet_connectivity">Oops ! No Internet :-(</string>
	<string name="some_thing_went_wrong">Ummm! Something went wrong :-(</string>
	<string name="lister">Lister</string>
	<string name="renter">Renter</string>
	<string name="no_account_text">No Account? Signup here.</string>
	<string name="sign_in_to_continue">Sign in to continue !</string>
	<string name="welcome">Welcome</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="forgot_password">Forgot Password?</string>
	<string name="login">login</string>
	<string name="list_a_car">Signup as a lister</string>
	<string name="last_name">Last Name</string>
	<string name="first_name">First Name</string>
	<string name="phone_no">Phone No</string>
	<string name="date_of_birth">Date of Birth</string>
	<string name="email_address">Email</string>
	<string name="user_name">Username</string>
	<string name="check_mark">\u2713</string>
	<string name="agree_to_terms_and_conditions">Agree to terms and conditions</string>
	<string name="rent_a_car">Signup as a Renter</string>
	<string name="pricing_text">Enter your desired amount for daily rent of your car</string>
	<string name="pricing_terms">Team Renkar will work on this choice to make a better decision to make your earning
		better
	</string>
	<string name="air_conditioned">Air Condition</string>
	<string name="alloy_rim">Alloy rims</string>
	<string name="auto">Automatic</string>
	<string name="convertible">Convertible</string>
	<string name="blue_tooth">Bluetooth</string>
	<string name="gps">GPS</string>
	<string name="show_map"><u>Show Map</u></string>
	<string name="add_your_car">Add your Car</string>
	<string name="instant_book_desc">Instant book allows renters to rent you car immediately without asking you for
		availability, instead lister and renter will have a chat about renting a car.
	</string>
	<string name="must_not_be_empty">Fields must not be empty</string>
	<string name="hooray">After Renkar cut, You can earn up to\n</string>
	<string name="renkar_cut">After <b>Renkar cut</b> you will earn up to</string>
	<string name="per_week">per week</string>
	<string name="per_day">per day</string>
	<string name="registered_in">registered in</string>
	<string name="expires_in">expires in</string>
	<string name="car_add_successfully">Car has been listed successfully</string>
	<string name="permission_denied">Permission has been denied</string>
	<string name="location_permission_warning">Location permissions must be granted to make better results</string>
	<string name="two">2</string>
	<string name="four">4</string>
	<string name="five">5</string>
	<string name="model_warning">only cars manufactured b/w 2000 and 2019 can be listed</string>
	<string name="delivery_desc">Car must be delivered to renter place</string>
	<string name="car_already_exists">Car already exists.Go to your cars list, if you want to update your car details.
	</string>
	<string name="must_contain_alpha_numeric">Must contain alphanumeric character and a hyphen.</string>
    <string name="car_already_listed">Car has been listed already. Do you want to update your car with these details?
    </string>
    <string name="image">image</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
	<string name="payment_method">Payment Method</string>
	<string name="about">About</string>
    <string name="history">History</string>
    <string name="master_card">Master Card</string>
	<string name="visa">Visa</string>
	<string name="faysal_bank">Faysal Bank</string>
	<string name="bank_al_habib">Bank Al Habib</string>
	<string name="ubl">United Bank Limited</string>
    <string name="city">City</string>
	<string name="address">Address</string>
	<string name="profile_updated">Profile updated successfully</string>
	<string name="license">License Number</string>
    <string name="payment_method_added_successfully">Payment method added</string>
    <string name="sign_out">Signout</string>
    <string name="enter_you_location">Enter you location</string>
    <string name="messages">Messages</string>
    <string name="type_message_here">Type your message here....</string>
	<string name="sorry">Sorry</string>
	<string name="ok">OK</string>
	<string name="available_days">Available days?</string>
	<string name="negotiable">Price negotiable?</string>
	<string name="done">Done</string>
    <string name="done_chat_msg">Renter is ready to book your car. Do you want to make this booking?</string>
	<string name="ok_chat_msg">Are you sure to book this car? By clicking <i> OK </i> lister will get requested. </string>
	<string name="ok_end_msg">End conversation</string>
	<string name="done_end_msg">Cancel</string>
    <string name="rides">Rides</string>
	<string name="notification">Notifications</string>
    <string name="book_car">Book Car</string>
	<string name="end_conversation">End Conversation</string>
	<string name="cancel">Cancel</string>
	<string name="ok_msg">Request to book a car has been sent to lister, you can checkout lister response in History
		tab
	</string>
	<string name="monday">MO</string>
	<string name="tuesday">TU</string>
	<string name="wednesday">WED</string>
    <string name="thursday">TH</string>
	<string name="friday">FR</string>
	<string name="saturday">SA</string>
	<string name="sunday">SU</string>
	<string name="below_are_days">You can rent this car on these days only</string>
	<string name="rent_from">Rent from</string>
	<string name="rent_to">Rent to</string>
    <string name="request_approved_message">Your request to book car has bee approved. Click on OK to complete further
        process to rent a car.
    </string>
	<string name="request_declined_message">You declined to book your car. You can book your car by clicking OK.
	</string>
	<string name="request_pending_message">Request to book your car is on pending, click on OK to complete this request
		and book you car instantly.
	</string>
    <string name="do_you_have_more_cars">Do you have more Cars?</string>
    <string name="are_you_sure">Are you sure to book this car?</string>
</resources>
