<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                     android:layout_width="match_parent" android:layout_height="match_parent"
                                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                                     android:padding="@dimen/normal_padding"
                                                     android:background="@color/colorPrimaryDark"
>
	
	<com.google.android.material.appbar.AppBarLayout
			android:id="@+id/appbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:fitsSystemWindows="true"
			android:background="@color/colorPrimaryDark"
	>
		
		
		<com.google.android.material.appbar.CollapsingToolbarLayout
				android:id="@+id/collapsing_toolbar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:fitsSystemWindows="true"
				app:layout_scrollFlags="scroll|exitUntilCollapsed">
			
			<ImageView android:layout_width="150dp" android:layout_height="150dp"
			           android:layout_centerHorizontal="true"
			           android:src="@drawable/renkar_logo"
			           android:id="@+id/logo"
			           android:layout_margin="@dimen/normal_margin"
			/>
		
		</com.google.android.material.appbar.CollapsingToolbarLayout>
		
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
		          android:text="@string/list_a_car" android:textColor="@color/colorPrimaryDark"
		          android:textSize="@dimen/medium_text_size"
		          android:paddingStart="@dimen/normal_padding"
		          android:paddingEnd="@dimen/normal_padding"
		          android:paddingTop="@dimen/small_padding"
		          android:paddingBottom="@dimen/small_padding"
		          android:background="@drawable/white_round_corner_bg"
		          android:fontFamily="@font/proximanovasbold"
		          android:textAllCaps="true"
		          android:layout_gravity="end"
		/>
	
	</com.google.android.material.appbar.AppBarLayout>
	
	<LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
	              app:layout_behavior="@string/appbar_scrolling_view_behavior"
	              android:orientation="vertical"
	              android:layout_gravity="bottom"
	>
		
		<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
		              android:orientation="horizontal"
		              android:weightSum="3"
		
		>
			
			<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
			              android:orientation="vertical"
			              android:paddingTop="@dimen/a_small_padding"
			              android:paddingBottom="@dimen/a_small_padding"
			              android:id="@+id/fieldsLayout"
			              android:layout_weight="0.5"
			>
				
				<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
				          android:text="@string/username" android:textSize="@dimen/medium_text_size"
				          android:textColor="@color/colorPrimaryDark"
				          android:fontFamily="@font/proximanovaregular"
				/>
				
				<EditText android:layout_width="match_parent" android:layout_height="wrap_content"
				          android:backgroundTint="@color/colorPrimaryDark"
				          android:inputType="textCapSentences" android:includeFontPadding="true"
				          android:id="@+id/username"
				/>
				
				<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
				          android:text="@string/password" android:textSize="@dimen/medium_text_size"
				          android:textColor="@color/colorPrimaryDark"
				          android:fontFamily="@font/proximanovaregular"
				/>
				
				<EditText android:layout_width="match_parent" android:layout_height="wrap_content"
				          android:backgroundTint="@color/colorPrimaryDark"
				          android:inputType="textCapSentences" android:includeFontPadding="true"
				          android:id="@+id/password"
				/>
				
				<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
				          android:text="@string/forgot_password" android:textSize="@dimen/medium_text_size"
				          android:textColor="@color/colorPrimary"
				          android:layout_gravity="end"
				          android:fontFamily="@font/proximanovaregular"
				/>
				
				<Button android:layout_width="wrap_content" android:layout_height="wrap_content"
				        android:background="@drawable/color_accent_round_corner_bg"
				        android:layout_gravity="center"
				        android:text="@string/login"
				        android:paddingStart="@dimen/v_v_v_large_padding"
				        android:layout_margin="@dimen/small_margin"
				        android:paddingEnd="@dimen/v_v_v_large_padding"
				        android:textSize="@dimen/medium_text_size"
				        android:textColor="@color/white"
				/>
			
			</LinearLayout>
			
			<ImageView android:layout_width="match_parent" android:layout_height="match_parent"
			           android:src="@drawable/renkar_logo"
			           android:layout_weight="2.5"
			           android:layout_gravity="center"
			
			/>
		
		</LinearLayout>
		
		
		<TextView android:layout_width="match_parent" android:layout_height="wrap_content"
		          android:text="@string/no_account_text" android:textColor="@color/colorAccent"
		          android:textSize="@dimen/medium_text_size"
		          android:padding="@dimen/a_small_padding"
		          android:fontFamily="@font/proximanovaregular"
		          android:id="@+id/signupFromLogin"
		/>
	
	</LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>